# VTB_Task

./: Dockerfile  docker-compose.yaml  pyproject.toml  storage.py
app/: app.py  main.py  storage.py
app/static/: index.html
