[tool.poetry]
name = "vtb-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vtb_task"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
