[tool.poetry]
name = "storage-app"
version = "0.1.0"
description = "FastAPI Key:Value storage"
authors = ["Matthew G. | dr.galkovsky2017@gmail.com"]
readme = "README.md"
packages = [{include = "vtb_task"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
